虚拟机监控工具使用 1.jps 2.jstat 3.jinfo 4.jmap 5.jhat 6.jstack